[tool.poetry]
name = "ai-bot"
version = "0.1.0"
description = ""
authors = ["PI-Klimkovich <pol-ik@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.6"
openai = "^1.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
